# khoj

./: .finder.json  .gitignore  .khojignore  Cargo.toml  README.md  rewrite.sh  run_content_search.sh  run_tui.sh  test_filename_search.md  test_highlighting.sh  test_tui.md  tui_output.txt
src/: ignore_rules.rs  lib.rs  main.rs  model.rs  server.rs  theme.rs  tui.rs
tests/: tui_test.rs
web/: index.html  user-manual.html
