[package]
name = "seroost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
poppler-rs = "0.21.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tiny_http = "0.12.0"
xml-rs = "0.8.4"
crossterm = "0.27.0"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
walkdir = "2.5.0"
fuzzy-matcher = "0.3.7"
bat = "0.24.0"
once_cell = "1.19.0"
